--- a/lab-dw-pandas.ipynb
+++ b/lab-dw-pandas.ipynb
@@ -82,12 +82,354 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dd4e8cd8-a6f6-486c-a5c4-1745b0c035f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "import pandas as pd\n",
+    "\n",
+    "url = 'https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file1.csv'\n",
+    "\n",
+    "df = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "299f648a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiene 4008 filas y 11 columnas\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Numero de filas y columnas del DataFrame:\n",
+    "n_filas, n_columnas = df.shape \n",
+    "\n",
+    "print(f\"Tiene {n_filas} filas y {n_columnas} columnas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "55175daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipos de datos de cada columna: \n",
+      "Customer                      object\n",
+      "ST                            object\n",
+      "GENDER                        object\n",
+      "Education                     object\n",
+      "Customer Lifetime Value       object\n",
+      "Income                       float64\n",
+      "Monthly Premium Auto         float64\n",
+      "Number of Open Complaints     object\n",
+      "Policy Type                   object\n",
+      "Vehicle Class                 object\n",
+      "Total Claim Amount           float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#tipos de datos de cada columna:\n",
+    "data_types = df.dtypes\n",
+    "\n",
+    "print(\"Tipos de datos de cada columna: \")\n",
+    "print(data_types)\n",
+    "\n",
+    "#los siguientes tipos se tienen que pasar de object a float: Customer Lifetime Value y Number of Open Complaints "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e4a85fbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de valores unicos para cada columna: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Customer                     1071\n",
+       "ST                              8\n",
+       "GENDER                          5\n",
+       "Education                       6\n",
+       "Customer Lifetime Value      1027\n",
+       "Income                        774\n",
+       "Monthly Premium Auto          132\n",
+       "Number of Open Complaints       6\n",
+       "Policy Type                     3\n",
+       "Vehicle Class                   6\n",
+       "Total Claim Amount            761\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#identifica columnas categoricas y unicas:\n",
+    "\n",
+    "#numero de valores unico para cada columna:\n",
+    "v_unicos = df.nunique()\n",
+    "print(\"Número de valores unicos para cada columna: \")\n",
+    "v_unicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9a7cdb42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estadistica: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Income</th>\n",
+       "      <th>Monthly Premium Auto</th>\n",
+       "      <th>Total Claim Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1071.000000</td>\n",
+       "      <td>1071.000000</td>\n",
+       "      <td>1071.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>39295.701214</td>\n",
+       "      <td>193.234360</td>\n",
+       "      <td>404.986909</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>30469.427060</td>\n",
+       "      <td>1601.190369</td>\n",
+       "      <td>293.027260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>0.382107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>14072.000000</td>\n",
+       "      <td>68.000000</td>\n",
+       "      <td>202.157702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>36234.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>354.729129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>64631.000000</td>\n",
+       "      <td>109.500000</td>\n",
+       "      <td>532.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>99960.000000</td>\n",
+       "      <td>35354.000000</td>\n",
+       "      <td>2893.239678</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Income  Monthly Premium Auto  Total Claim Amount\n",
+       "count   1071.000000           1071.000000         1071.000000\n",
+       "mean   39295.701214            193.234360          404.986909\n",
+       "std    30469.427060           1601.190369          293.027260\n",
+       "min        0.000000             61.000000            0.382107\n",
+       "25%    14072.000000             68.000000          202.157702\n",
+       "50%    36234.000000             83.000000          354.729129\n",
+       "75%    64631.000000            109.500000          532.800000\n",
+       "max    99960.000000          35354.000000         2893.239678"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#estadisticas para columnas numericas\n",
+    "estadstica = df.describe()\n",
+    "print(\"Estadistica: \")\n",
+    "estadstica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "59c1a6ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resumen estadistico de las columnas categoricas:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer</th>\n",
+       "      <th>ST</th>\n",
+       "      <th>GENDER</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Customer Lifetime Value</th>\n",
+       "      <th>Number of Open Complaints</th>\n",
+       "      <th>Policy Type</th>\n",
+       "      <th>Vehicle Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1071</td>\n",
+       "      <td>1071</td>\n",
+       "      <td>954</td>\n",
+       "      <td>1071</td>\n",
+       "      <td>1068</td>\n",
+       "      <td>1071</td>\n",
+       "      <td>1071</td>\n",
+       "      <td>1071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>1071</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1027</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>RB50392</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Bachelor</td>\n",
+       "      <td>445811.34%</td>\n",
+       "      <td>1/0/00</td>\n",
+       "      <td>Personal Auto</td>\n",
+       "      <td>Four-Door Car</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>320</td>\n",
+       "      <td>457</td>\n",
+       "      <td>324</td>\n",
+       "      <td>4</td>\n",
+       "      <td>830</td>\n",
+       "      <td>780</td>\n",
+       "      <td>576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Customer      ST GENDER Education Customer Lifetime Value  \\\n",
+       "count      1071    1071    954      1071                    1068   \n",
+       "unique     1071       8      5         6                    1027   \n",
+       "top     RB50392  Oregon      F  Bachelor              445811.34%   \n",
+       "freq          1     320    457       324                       4   \n",
+       "\n",
+       "       Number of Open Complaints    Policy Type  Vehicle Class  \n",
+       "count                       1071           1071           1071  \n",
+       "unique                         6              3              6  \n",
+       "top                       1/0/00  Personal Auto  Four-Door Car  \n",
+       "freq                         830            780            576  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#estadistica para columnas categoricas\n",
+    "\n",
+    "categoricas = df.describe(include='object')\n",
+    "\n",
+    "print(\"Resumen estadistico de las columnas categoricas:\")\n",
+    "categoricas"
    ]
   },
   {
@@ -116,12 +458,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2dca5073-4520-4f42-9390-4b92733284ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 ubicaciones de clientes menos comunes: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ST\n",
+       "AZ             25\n",
+       "WA             30\n",
+       "Washington     81\n",
+       "Nevada         98\n",
+       "Cali          120\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "#ST contiene las localizaciones y contamos la frecuencia de cada localizacion\n",
+    "location_counts = df['ST'].value_counts()\n",
+    "\n",
+    "#ordena de menor a mayor con la funcion sort.values()\n",
+    "sorted_ = location_counts.sort_values()\n",
+    "\n",
+    "#Selecciona las 5 primeras ubicaciones con la funcion head para conocer las ubicaciones menos comunes\n",
+    "top_5 = sorted_.head(5)\n",
+    "\n",
+    "print(\"Top 5 ubicaciones de clientes menos comunes: \")\n",
+    "top_5"
    ]
   },
   {
@@ -146,12 +522,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "bcfad6c1-9af2-4b0b-9aa9-0dc5c17473c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polizas vendias por cada tipo de poliza:\n",
+      "Policy Type\n",
+      "Personal Auto     780\n",
+      "Corporate Auto    234\n",
+      "Special Auto       57\n",
+      "Name: count, dtype: int64\n",
+      "El tipo de poliza con un mayor numero de polizas vendidas es 'Personal Auto' con '780' polizas vendidas\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "#contar el numero de polizas vendidas por cada tipo de poliza\n",
+    "policy_counts = df['Policy Type'].value_counts()\n",
+    "\n",
+    "print(\"Polizas vendias por cada tipo de poliza:\")\n",
+    "print(policy_counts)\n",
+    "\n",
+    "#tipo de polizas mas vendidas\n",
+    "highestnum_policytype = policy_counts.idxmax()\n",
+    "\n",
+    "#calculo el maximo de el tipo de polizas mas vendidas\n",
+    "max_policy = policy_counts.max()\n",
+    "\n",
+    "print(f\"El tipo de poliza con un mayor numero de polizas vendidas es '{highestnum_policytype}' con '{max_policy}' polizas vendidas\")"
    ]
   },
   {
@@ -176,62 +578,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "0c0563cf-6f8b-463d-a321-651a972f82e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average income for Personal Auto Polices:  38180.7\n",
+      "Average income for Corporate Auto Polices:  41390.31\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "80b16c27-f4a5-4727-a229-1f88671cf4e2",
-   "metadata": {},
-   "source": [
-    "### Bonus: Exercise 4\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac584986-299b-475f-ac2e-928c16c3f512",
-   "metadata": {},
-   "source": [
-    "Your goal is to identify customers with a high policy claim amount.\n",
+    "#Uso loc para crear dos DataFrames donde en uno el Policy Type sea Personal Auto y en el otro Corporate Auto\n",
+    "personal_auto_df = df.loc[df['Policy Type'] == 'Personal Auto']\n",
     "\n",
-    "Instructions:\n",
+    "corporate_auto_df = df.loc[df['Policy Type'] == 'Corporate Auto']\n",
     "\n",
-    "- Review again the statistics for total claim amount to gain an understanding of the data.\n",
-    "- To identify potential areas for improving customer retention and profitability, we want to focus on customers with a high policy claim amount. Consider customers with a high policy claim amount to be those in the top 25% of the total claim amount. Create a pandas DataFrame object that contains information about customers with a policy claim amount greater than the 75th percentile.\n",
-    "- Use DataFrame methods to calculate summary statistics about the high policy claim amount data. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e3af5f1-6023-4b05-9c01-d05392daa650",
-   "metadata": {},
-   "source": [
-    "*Note: When analyzing data, we often want to focus on certain groups of values to gain insights. Percentiles are a useful tool to help us define these groups. A percentile is a measure that tells us what percentage of values in a dataset are below a certain value. For example, the 75th percentile represents the value below which 75% of the data falls. Similarly, the 25th percentile represents the value below which 25% of the data falls. When we talk about the top 25%, we are referring to the values that fall above the 75th percentile, which represent the top quarter of the data. On the other hand, when we talk about the bottom 25%, we are referring to the values that fall below the 25th percentile, which represent the bottom quarter of the data. By focusing on these groups, we can identify patterns and trends that may be useful for making decisions and taking action.*\n",
+    "#Calcula el average de cada uno con la funcion mean en la columna del Income(ingresos)\n",
+    "average_income_personal_auto = round(personal_auto_df['Income'].mean(), 2)\n",
     "\n",
-    "*Hint: look for a method that gives you the percentile or quantile 0.75 and 0.25 for a Pandas Series.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2d234634-50bd-41e0-88f7-d5ba684455d1",
-   "metadata": {},
-   "source": [
-    "*Hint 2: check `Boolean selection according to the values of a single column` in https://towardsdatascience.com/filtering-data-frames-in-pandas-b570b1f834b9*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b731bca6-a760-4860-a27b-a33efa712ce0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here"
+    "average_income_corporate_auto = round(corporate_auto_df['Income'].mean(), 2)\n",
+    "\n",
+    "#Imprimimos el average por cada tipo de poliza\n",
+    "print(\"Average income for Personal Auto Polices: \", average_income_personal_auto)\n",
+    "\n",
+    "print(\"Average income for Corporate Auto Polices: \", average_income_corporate_auto)"
    ]
   }
  ],
@@ -251,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
